--- a/_posts/2021-01-06-NodeJS.md
+++ b/_posts/2021-01-06-NodeJS.md
@@ -29,3 +29,14 @@ The above image depicts the high level overview of how NodeJS is structured. We 
 So how does the __V8__ and __libUV__ modules fit into the javascript world of NodeJS? Read on!
 
 ### V8 + libUV = Transpile, Execute, Respond
+
+NodeJS is almost `50% javascript` and `50% C++`. Actually, it's also some more languages like Python,C,HTML etc. (just check the GitHub repo of Node), however, the point is NodeJS is not completely written in javascript.
+
+The job of NodeJS is more like a wrapper around the implementation of OS specific functions like file access and other I/O.
+
+So, for example, when you make use of the popular inbuilt module `fs` for writing to files and write the code to write some content into a text file, NodeJS enables you to write the code in javascript, then delegates the rest of the job of transpiling (converting) the code to C++/C as understood by the underlying OS to ***Chrome V8 engine***, which then delegates the job of actually performing the system call(s) of making a text file, opening a file descriptor socket, writing the content into this socket, closing the connection and returning status (success/failure) of file write back to V8 and finally NodeJS to ***libUV***.
+
+Thus, V8 works like that of a transpiler while libUV is the heart of the NodeJS runtime that actually performs the OS level operations.
+
+And as goes with tradition, libUV is written `completely in C++` as is preferred for performing OS level operations.
+
