Configured image links; Post done;

--- a/_posts/2021-01-06-NodeJS.md
+++ b/_posts/2021-01-06-NodeJS.md
@@ -22,7 +22,7 @@ Traditionally, C++ was the preferred way (still is, I guess) to perform OS level
 Today, you can write a few lines of javascript to create a file,read/update it and finally delete it without having to write complicated, error-prone C++ code.
 
 ### The NodeJS structure
-![node_structure_image](./images/node_structure.png "Structure of NodeJS internals")
+![node_structure_image](/compute/images/node_structure.png "Structure of NodeJS internals")
 
 The above image depicts the high level overview of how NodeJS is structured. We write our javascript code in NodeJS, which in turn is executed by the V8 engine and another important module (library) `libUV` which is finally executed by the OS (Windows/Mac/Linux).
 
@@ -38,5 +38,53 @@ So, for example, when you make use of the popular inbuilt module `fs` for writin
 
 Thus, V8 works like that of a transpiler while libUV is the heart of the NodeJS runtime that actually performs the OS level operations.
 
-And as goes with tradition, libUV is written `completely in C++` as is preferred for performing OS level operations.
+And as goes with tradition, libUV is written `completely in C++` as is preferred for performing OS level operations. V8 is mostly written in C++ with some parts in JS. The below image concises the different language contributions of each modules of the NodeJS runtime:
+![node_structure_image_code_contrib](/compute/images/node_structure_code_details.png "Structure of NodeJS internals with language contributions")
 
+### Meeting the best of both worlds
+So far NodeJS allows developers to write javascript code that are essentially boiled down to C++ code to perform system level operations in speed. Pretty cool, but `how does the JS world meets the C++ world?` More precisely,at which stage of the whole process (as mentioned above)?
+
+As you may (or may not, no worries!) have guessed, the V8 engine serves as the boundary between the JS world of NodeJS runtime wrapper and C++ world libUV library. It is here where the values and instructions written in javascript are converted to values and instructions as understood by C++.
+
+Now, consider the following code snippets. First one is written in javascript while the second one it's C++ equivalent.
+
+```javascript
+//variable initialization
+const integerValue = 10;
+var otherValue = 20;
+
+//print return value of performOperation()
+console.log(performOperation(integerValue,otherValue));
+
+// definiton of performOperation()
+function performOperation(firstParameter,secondParameter){
+    return firstParameter+secondParameter;
+}
+```
+
+```c++
+//variable initialization
+int integerValue = 10;
+int otherValue = 20;
+
+// definiton of performOperation()
+// Note: C++ requires defining the function
+// before calling it, unlike JS.
+int performOperation(int firstParameter,int secondParameter){
+    return firstParameter+secondParameter;
+}
+
+//print return value of performOperation()
+cout<<performOperation(integerValue,otherValue);
+```
+
+The point of showing the snippets is to identify how similar both the worlds of JS and C++ are, atleast on a syntactic level. Yes, they perform differently, they're compiled differently etc. but undertand this --- if you and I can perform mappings between these two languages just by looking at the code, it musn't be that hard a task to be performed by the V8 engine. Atleast, it's *doable*.
+
+### NodeJS' twoface and conclusion
+Wrapping up part-1 of this NodeJS series, you can learn more about NodeJS runtime at their [official GitHub repository](https://github.com/nodejs/node). It's open source, right?
+
+If you've a quick look in this repo, you'll find two important directories --- `src` and `lib`. The lib folder is the JS side of NodeJS while the src is the C++ side of it.
+
+For example,for the standard NodeJS library's `crypto` module having the function `pbkdf2`, you can find it both in [lib folder](https://github.com/nodejs/node/blob/3518919cb7a8fca324f67c3fa3c61f1d820f61b2/lib/internal/crypto/pbkdf2.js#L35) as well as [src folder](https://github.com/nodejs/node/blob/3518919cb7a8fca324f67c3fa3c61f1d820f61b2/src/crypto/crypto_pbkdf2.cc#L1). Ofcourse, the src folder contains the actual implementation of this function written entirely in C++.
+
+Happy exploring!
